fix: add sonar checks for PRs

--- a/.github/workflows/build-on-commit.yml
+++ b/.github/workflows/build-on-commit.yml
@@ -2,6 +2,9 @@ name: Build and Publish
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   prepare-variables:
