--- a/helm-templates/dbaas-agent/Chart.yaml
+++ b/helm-templates/dbaas-agent/Chart.yaml
@@ -4,4 +4,7 @@ description: A Helm chart for the dbaas-agent application
 name: dbaas-agent
 # The effective version will be computed during Helm generation
 version: 0.0.1
-
+dependencies:
+  - name: coretpl
+    version: "0.2.2"
+    repository: "https://netcracker.github.io/qubership-core-bootstrap/"
