--- a/helm-templates/dbaas-agent/templates/deployment.yaml
+++ b/helm-templates/dbaas-agent/templates/deployment.yaml
@@ -12,9 +12,9 @@ metadata:
         app.kubernetes.io/part-of: 'Cloud-Core'
         app.kubernetes.io/managed-by: 'saasDeployer'
         app.kubernetes.io/technology: 'go'
-        deployment.netcracker.com/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
+        deployment.qubership.org/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
     annotations:
-        netcracker.cloud/start.stage: '1'
+        qubership.cloud/start.stage: '1'
 spec:
     replicas: {{ .Values.REPLICAS | default 1 }}
     revisionHistoryLimit: 3
@@ -59,20 +59,12 @@ spec:
             -   name: client-credentials
                 secret:
                     secretName: '{{ .Values.SERVICE_NAME }}-client-credentials'
-{{ if .Values.INTERNAL_TLS_ENABLED }}
-            -   name: tls
-                secret:
-                    secretName: '{{ .Values.SERVICE_NAME }}-tls'
-{{ end }}
 {{ if and .Values.READONLY_CONTAINER_FILE_SYSTEM_ENABLED (eq .Values.PAAS_PLATFORM "KUBERNETES") }}
             -   name: sslcerts
                 emptyDir: {}
             -   name: cacerts
                 emptyDir: {}
 {{ end }}
-            -   name: '{{ .Values.SSL_SECRET }}'
-                secret:
-                    secretName: '{{ .Values.SSL_SECRET }}'
             containers:
             -   name: '{{ .Values.SERVICE_NAME }}'
                 image: '{{ .Values.IMAGE_REPOSITORY }}:{{ .Values.TAG }}'
@@ -80,19 +72,12 @@ spec:
                 -   name: client-credentials
                     mountPath: /etc/secret
                     readOnly: true
-{{ if .Values.INTERNAL_TLS_ENABLED }}
-                -   name: tls
-                    mountPath: '/etc/tls'
-                    readOnly: true
-{{ end }}
 {{ if and .Values.READONLY_CONTAINER_FILE_SYSTEM_ENABLED (eq .Values.PAAS_PLATFORM "KUBERNETES") }}
                 -   name: sslcerts
                     mountPath: /etc/ssl/certs
                 -   name: cacerts
                     mountPath: /usr/local/share/ca-certificates
 {{ end }}
-                -   name: '{{ .Values.SSL_SECRET }}'
-                    mountPath: /tmp/cert/{{ .Values.SSL_SECRET }}
                 args:
                 - '/app/dbaas-agent'
                 env:
@@ -100,19 +85,6 @@ spec:
                     value: '{{ .Values.DBAAS_AGENT_NAMESPACE_ISOLATION_ENABLED }}'
                 -   name: LOG_LEVEL
                     value: '{{lower .Values.LOG_LEVEL}}'
-                -   name: CERTIFICATE_BUNDLE_{{ .Values.SSL_SECRET }}_MD5SUM
-                    value: '{{ .Values.CERTIFICATE_BUNDLE_MD5SUM }}'
-                -   name: INTERNAL_TLS_ENABLED
-                    value: '{{ .Values.INTERNAL_TLS_ENABLED }}'
-{{ if .Values.INTERNAL_TLS_ENABLED }}
-                -   name: CERTIFICATE_FILE_PASSWORD
-                    valueFrom:
-                      secretKeyRef:
-                        name: 'tls-password-secret'
-                        key: 'tls-password'
-                -   name: CERTIFICATE_FILE_PATH
-                    value: '/etc/tls'
-{{ end }}
                 -   name: API_DBAAS_ADDRESS
                     value: '{{ .Values.API_DBAAS_ADDRESS }}'
                 -   name: CONSUL_ENABLED
@@ -167,15 +139,15 @@ spec:
                 livenessProbe:
                     httpGet:
                         path: /probes/live
-                        port: {{ if .Values.INTERNAL_TLS_ENABLED }} tls {{ else }} web {{ end }}
-                        scheme: {{ if .Values.INTERNAL_TLS_ENABLED }} HTTPS {{ else }} HTTP {{ end }}
+                        port: web
+                        scheme: HTTP
                     initialDelaySeconds: 180
                     timeoutSeconds: 15
                 readinessProbe:
                     httpGet:
                         path: /probes/ready
-                        port: {{ if .Values.INTERNAL_TLS_ENABLED }} tls {{ else }} web {{ end }}
-                        scheme: {{ if .Values.INTERNAL_TLS_ENABLED }} HTTPS {{ else }} HTTP {{ end }}
+                        port: web
+                        scheme: HTTP
                     initialDelaySeconds: 5
                     timeoutSeconds: 3
                 securityContext:
