--- a/helm-templates/dbaas-agent/templates/podmonitor.yaml
+++ b/helm-templates/dbaas-agent/templates/podmonitor.yaml
@@ -11,12 +11,12 @@ metadata:
     app.kubernetes.io/part-of: Cloud-Core
     app.kubernetes.io/managed-by: saasDeployer
     app.kubernetes.io/processed-by-operator: victoriametrics-operator
-    deployment.netcracker.com/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
+    deployment.qubership.org/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
 spec:
   podMetricsEndpoints:
     - interval: 30s
-      port: {{ if .Values.INTERNAL_TLS_ENABLED }} tls {{ else }} web {{ end }}
-      scheme: {{ if .Values.INTERNAL_TLS_ENABLED }} https {{ else }} http {{ end }}
+      port: web
+      scheme: http
       path: "/prometheus"
   jobLabel: k8s-app
   namespaceSelector:
