--- a/helm-templates/dbaas-agent/templates/service.yaml
+++ b/helm-templates/dbaas-agent/templates/service.yaml
@@ -4,13 +4,13 @@ apiVersion: v1
 metadata:
   name: '{{ .Values.SERVICE_NAME }}'
   annotations:
-    netcracker.cloud/start.stage: '1'
+    qubership.cloud/start.stage: '1'
   labels:
     name: '{{ .Values.SERVICE_NAME }}'
     app.kubernetes.io/name: '{{ .Values.SERVICE_NAME }}'
     app.kubernetes.io/part-of: 'Cloud-Core'
     app.kubernetes.io/managed-by: 'saasDeployer'
-    deployment.netcracker.com/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
+    deployment.qubership.org/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
 spec:
   ports:
     -   name: web
