Style: Tune grand report warnings

--- a/helm-templates/dbaas-agent/templates/service.yaml
+++ b/helm-templates/dbaas-agent/templates/service.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/name: '{{ .Values.SERVICE_NAME }}'
     app.kubernetes.io/part-of: 'Cloud-Core'
     app.kubernetes.io/managed-by: 'saasDeployer'
-    deployment.netcracker.com/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
+    deployment.qubership.org/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
 spec:
   ports:
     -   name: web
