--- a/helm-templates/dbaas-agent/templates/deployment.yaml
+++ b/helm-templates/dbaas-agent/templates/deployment.yaml
@@ -12,7 +12,7 @@ metadata:
         app.kubernetes.io/part-of: 'Cloud-Core'
         app.kubernetes.io/managed-by: 'saasDeployer'
         app.kubernetes.io/technology: 'go'
-        deployment.netcracker.com/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
+        deployment.qubership.org/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
     annotations:
         netcracker.cloud/start.stage: '1'
 spec:
