Revert "fix: remove obsolete helm properties"
This reverts commit 34bd8c40d81dfa49cafccb0a5a0767675eb09aa4.

--- a/helm-templates/dbaas-agent/templates/deployment.yaml
+++ b/helm-templates/dbaas-agent/templates/deployment.yaml
@@ -89,6 +89,12 @@ spec:
                     {{ end }}
                 -   name: DBAAS_DEFAULT_SEC_POLICY
                     value: '{{ .Values.DBAAS_DEFAULT_SEC_POLICY }}'
+                -   name: TRACING_ENABLED
+                    value: '{{ .Values.TRACING_ENABLED }}'
+                -   name: TRACING_HOST
+                    value: '{{ .Values.TRACING_HOST }}'
+                -   name: TRACING_SAMPLER_RATELIMITING
+                    value: '{{ .Values.TRACING_SAMPLER_RATELIMITING }}'
                 -   name: CLOUD_NAMESPACE
                     valueFrom:
                         fieldRef:
