feat: remove 'qubership.org' api group

--- a/helm-templates/dbaas-agent/templates/secret.yaml
+++ b/helm-templates/dbaas-agent/templates/secret.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/part-of: 'Cloud-Core'
     app.kubernetes.io/managed-by: 'saasDeployer'
-    deployment.qubership.org/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
+    deployment.netcracker.com/sessionId: '{{ .Values.DEPLOYMENT_SESSION_ID }}'
 stringData:
   username: '{{ .Values.DBAAS_CLUSTER_DBA_CREDENTIALS_USERNAME | default "cluster-dba" }}'
   password: '{{ .Values.DBAAS_CLUSTER_DBA_CREDENTIALS_PASSWORD | default "password" }}'
